@@ -1,6 +1,16 @@
 v3.6.8 (XXXX-XX-XX)
 -------------------
 
+* Added startup option `--foxx.force-update-on-startup` to toggle wait for all foxx services
+  in all databases to be propagated to this coordinator before it completes the
+  boot sequence. In case we do not wait, the coordinator will complete the boot
+  sequence faster, and the foxx services will be propagated lazily. This can cause
+  slower response times on the first calls to foxx services.
+  If you are not using foxx you should keep this option false (default) to gain
+  faster startup.
+  If you rely on foxx to be fast as soon as a coordinator is integrated, you should
+  set this option to true.
+
 * Added startup option `--database.old-system-collections` to toggle automatic
   creation of system collections `_modules` and `_fishbowl`, along with their
   internal usage. These collections are useful only in very few cases, so it
